--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:23.6.1-alpine3.20
 WORKDIR /app
-COPY . .
+COPY package*.json .
 RUN npm install
+COPY . .
+EXPOSE 8080
 ENTRYPOINT [ "node", "server.js" ]
